[package]
name = "foxtive-cron"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Foxtive Cron"
repository = "https://github.com/foxtive/foxtive-cron"
authors = ["ahmard"]

[features]
tokio-macros = ["tokio/macros"]

[dependencies]
cron = "0.15.0"
log = "0.4.27"
chrono = "0.4.41"
async-trait = "0.1.88"
anyhow = { version = "1.0.98", features = ["backtrace"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "time", "rt-multi-thread"] }
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"


[[example]]
name = "basic"
path = "examples/basic.rs"
required-features = ["tokio-macros"]