[package]
name = "foxtive-cron"
version = "0.5.0"
edition = "2024"
license = "MIT"
description = "Foxtive Cron"
repository = "https://github.com/foxtive/foxtive"
authors = ["ahmard"]

[features]
tokio-macros = ["tokio/macros"]

[dependencies]
cron = "0.16.0"
tracing = "0.1.41"
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = { version = "0.10.1", features = ["serde"] }
async-trait = "0.1.88"
anyhow = { version = "1.0.98", features = ["backtrace"] }
thiserror = "2.0.11"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "time", "sync", "signal", "macros"] }
tokio-util = { version = "0.7.13", features = ["rt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.10.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "time", "rt-multi-thread", "sync"] }
tracing-subscriber = "0.3"


[[example]]
name = "basic"
path = "examples/basic.rs"
required-features = ["tokio-macros"]

[[example]]
name = "advanced"
path = "examples/advanced.rs"
required-features = ["tokio-macros"]

[[example]]
name = "concurrency"
path = "examples/concurrency.rs"
required-features = ["tokio-macros"]

[[example]]
name = "persistence"
path = "examples/persistence.rs"
required-features = ["tokio-macros"]

[[example]]
name = "priority"
path = "examples/priority.rs"
required-features = ["tokio-macros"]

[[example]]
name = "timezone"
path = "examples/timezone.rs"
required-features = ["tokio-macros"]
