[package]
name = "foxtive-macros"
version = "0.4.1"
edition = "2024"
license = "MIT"
description = "Foxtive Macros"
repository = "https://github.com/foxtive/foxtive"
authors = ["ahmard"]

[lib]
proc-macro = true

[features]
database = []

[dependencies]
quote = { version = "1.0" }
syn = { version = "2.0", features = ["full"] }