[package]
name = "foxtive-macros"
version = "0.4.2"
edition = "2024"
license = "MIT"
description = "Foxtive Macros"
repository = "https://github.com/foxtive/foxtive"
authors = ["ahmard"]

[lib]
proc-macro = true

[features]
database = []

[dependencies]
quote = { version = "1.0.43" }
syn = { version = "2.0.114", features = ["full"] }
strum_macros = { version = "0.27.2" }
strum = { version = "0.27.2", default-features = false, features = ["std"] }