[package]
name = "foxtive-macros"
version = "0.4.3"
edition = "2024"
license = "MIT"
description = "Foxtive Macros"
repository = "https://github.com/foxtive/foxtive"
authors = ["ahmard"]

[lib]
proc-macro = true

[features]
database = []

[dependencies]
quote = { version = "1.0.45" }
syn = { version = "2.0.117", features = ["full"] }
strum_macros = { version = "0.28.0" }
strum = { version = "0.28.0", default-features = false, features = ["std"] }