[package]
name = "foxtive-supervisor"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Foxtive Cron"
repository = "https://github.com/foxtive/foxtive-cron"
authors = ["ahmard"]

[dependencies]
tracing = "0.1.41"
async-trait = "0.1.88"
anyhow = { version = "1.0.98", features = ["backtrace"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "time"] }
futures-util = "0.3.31"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "time", "rt-multi-thread"] }

