[package]
name = "foxtive-supervisor"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Foxtive Supervisor - Advanced task supervision for Rust applications"
repository = "https://github.com/foxtive/foxtive-cron"
authors = ["ahmard"]

[dependencies]
tracing = "0.1.41"
async-trait = "0.1.88"
anyhow = { version = "1.0.98", features = ["backtrace"] }
thiserror = "2.0.18"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "time", "sync"] }
futures-util = "0.3.31"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

