[package]
name = "foxtive-supervisor"
version = "0.3.1"
edition = "2024"
license = "MIT"
description = "Foxtive Supervisor - Advanced task supervision for Rust applications"
repository = "https://github.com/foxtive/foxtive-cron"
authors = ["ahmard"]

[dependencies]
tracing = "0.1.44"
async-trait = "0.1.89"
anyhow = { version = "1.0.102", features = ["backtrace"] }
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["rt-multi-thread", "time", "sync", "macros", "fs", "io-util"] }
futures = "0.3.31"
futures-util = "0.3.32"
uuid = { version = "1.23.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rand = "0.10.0"
foxtive-cron = { path = "../foxtive-cron", version = "0.4.0", optional = true }
chrono = { version = "0.4.44", optional = true }
chrono-tz = { version = "0.10.4", optional = true }
redis = { version = "1.2.0", features = ["tokio-comp"], optional = true }

[features]
default = []
cron = ["foxtive-cron", "chrono", "chrono-tz"]
distributed = ["redis", "chrono"]

[dev-dependencies]
tokio = { version = "1.51.0", features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tempfile = "3.27.0"

[[test]]
name = "lifecycle_tests"
path = "tests/lifecycle_tests.rs"

[[test]]
name = "concurrency_tests"
path = "tests/concurrency_tests.rs"

[[test]]
name = "persistence_tests"
path = "tests/persistence_tests.rs"

[[test]]
name = "dynamic_management_tests"
path = "tests/dynamic_management_tests.rs"

[[test]]
name = "event_tests"
path = "tests/event_tests.rs"

[[test]]
name = "prerequisite_tests"
path = "tests/prerequisite_tests.rs"

[[test]]
name = "error_handling_tests"
path = "tests/error_handling_tests.rs"

[[test]]
name = "circuit_breaker_tests"
path = "tests/circuit_breaker_tests.rs"

[[test]]
name = "persistence_benchmarks"
path = "tests/persistence_benchmarks.rs"

[[test]]
name = "shutdown_tests"
path = "tests/shutdown_tests.rs"

[[test]]
name = "testing_util_tests"
path = "tests/testing_util_tests.rs"

[[test]]
name = "cron_tests"
path = "tests/cron_tests.rs"

[[test]]
name = "distributed_coordination_tests"
path = "tests/distributed_coordination_tests.rs"

[[test]]
name = "dependency_race_condition_tests"
path = "tests/dependency_race_condition_tests.rs"
