[package]
name = "foxtive"
version = "0.18.2"
edition = "2024"
license = "MIT"
description = "Foxtive Framework"
repository = "https://github.com/foxtive/foxtive"
authors = ["ahmard"]

[features]
database = ["diesel"]
rabbitmq = ["lapin", "deadpool", "deadpool-lapin"]
redis = ["dep:redis", "deadpool", "deadpool-redis"]
base64 = ["dep:base64"]
hmac = ["dep:hmac", "hex", "sha2"]
reqwest = ["dep:reqwest"]
crypto = ["rust-argon2"]
jwt = ["jsonwebtoken"]
regex = ["fancy-regex"]
templating = ["tera"]
strum = ["dep:strum"]
html-sanitizer = ["dep:ammonia"]
http = ["dep:serde_urlencoded"]
cache = []
cache-redis = ["cache", "redis"]
cache-filesystem = ["cache", "tokio/fs", "regex"]
cache-in-memory = ["cache", "dep:dashmap"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.99", features = ["backtrace", "default"] }

deadpool = { version = "0.12.3", optional = true }

# RabbitMQ
lapin = { version = "3.2.1", optional = true }
deadpool-lapin = { version = "0.13.1", features = ["rt_tokio_1"], optional = true }

# Redis
redis = { version = "0.32.4", default-features = false, optional = true, features = [
    "tokio-native-tls-comp", "connection-manager"
] }
deadpool-redis = { version = "0.22.0", features = ["rt_tokio_1"], optional = true }

# Dashmap
dashmap = { version = "6.1.0", optional = true }

http = "1.3.1"
thiserror = "2.0.16"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
serde = { version = "1.0.225", features = ["derive"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "time"] }
chrono = { version = "0.4.42", features = ["std", "serde"] }
dotenv = { version = "0.15.0" }
serde_json = { version = "1.0.145", default-features = false, features = ["std"] }
futures-util = { version = "0.3.31", default-features = false }
base64 = { version = "0.22.1", optional = true }
hex = { version = "0.4.3", optional = true }
sha2 = { version = "0.10.9", optional = true }
hmac = { version = "0.12.1", optional = true }
fancy-regex = { version = "0.16.1", optional = true }
tera = { version = "1.20.0", optional = true }
reqwest = { version = "0.12.23", features = ["json"], optional = true }
diesel = { version = "2.3.1", features = ["postgres", "r2d2"], optional = true }
jsonwebtoken = { version = "9.3.1", optional = true }
strum = { version = "0.27.2", default-features = false, features = ["std"], optional = true }
rust-argon2 = { version = "3.0.0", optional = true }
ammonia = { version = "4.1.1", default-features = false, optional = true }
async-trait = "0.1.89"
tracing = "0.1.41"
serde_urlencoded = { version = "0.7.1", optional = true }
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter"] }

[dev-dependencies]
tokio = { version = "1.47.1", features = ["rt-multi-thread", "time", "macros"] }
tempfile = { version = "3.22.0" }
