[package]
name = "axum-cron"
version = "0.1.0"
edition = "2024"

[dependencies]
foxtive-cron = { path = "../../../foxtive-cron" }
foxtive-supervisor = { path = "../../" }
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "time", "macros", "signal"] }
async-trait = "0.1.89"
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
chrono = "0.4.42"
