[package]
name = "cron-scheduling"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
foxtive-supervisor = { path = "../..", features = ["cron"] }
tokio = { version = "1", features = ["full", "signal"] }
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
