[package]
name = "distributed-coordination-example"
version = "0.1.0"
edition = "2024"

[dependencies]
foxtive-supervisor = { path = "../..", features = ["distributed"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
